remove(spatial.analysis): 删除空间分析节点相关类
- 移除 BoundingBoxNode 类及其所有功能实现
- 移除 DeconstructBoxGeometryNode 类及其所有功能实现
- 移除 DeconstructConeNode 类及其所有功能实现
- 移除 DeconstructCylinderNode 类及其所有功能实现
- 移除 DeconstructEllipsoidNode 类及其所有功能实现
- 移除 DeconstructOctahedronNode 类及其所有功能实现
- 移除 DeconstructPolygonProfileNode 类及其所有功能实现